--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -2,30 +2,48 @@
 @import '~amsterdam-stijl/dist/scss/ams-breakpoints';
 
 .header-component {
+  .screen-logo {
+    @media (max-width: 539px) {
+      width: 12px;
+      height: 41px;
+    }
+  }
+
+  .grid-header-logo {
+    display: flex;
+  }
+
+  .logotext {
+    font-size: 14px;
+
+    @media (min-width: 540px) {
+      font-size: 13px;
+    }
+  }
+
+  .header-title {
+    margin: 10px 20px;
+    font-size: 1.125rem;
+    line-height: 1.565rem;
+
+    @media (min-width: 540px) {
+      font-size: 1.875rem;
+      line-height: 2.375rem;
+      font-weight: 600;
+
+      margin: 20px 40px;
+    }
+  }
+
   .mainlogo {
     text-decoration: none;
-
-    .logoset .screen-logo {
-      width: 20px;
-    }
   }
 
   .links {
     margin-top: 1.125rem;
 
-    // TODO: remove this li {} block and uncomment the one below it once npm package stijl v2.9.2 available
-
     li {
       text-align: right;
     }
-      /*
-      li {
-        text-align: left;
-
-        @include media-breakpoint-up(sm) {
-          text-align: right;
-        }
-      }
-      */
   }
 }
