Changes homepage component

--- a/app/containers/GlobalError/style.scss
+++ b/app/containers/GlobalError/style.scss
@@ -20,6 +20,8 @@
     appearance: none;
     border: 0;
     float: right;
+    background: transparent;
+    cursor: pointer;
 
     .label {
       @include visuallyhidden;
